# yuck_premium

./: .env  .gitignore  .spotify_token_cache.json  =w  Cargo.toml  README.md  \
examples/: gist.rs  paste.rs
src/: cli.rs  downloader.rs  main.rs  message.txt  metadata.rs  models.rs  spotify.rs
src/models/: cli.rs  spotify.rs
